# SLIDE

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Characterisation_0.2C_CC_discharge.csv  Characterisation_1C_CC_discharge.csv  Characterisation_2C_CC_discharge.csv  Cheb_An.csv  Cheb_Bp.csv  Cheb_Cn.csv  Cheb_Cp.csv  Cheb_Dn.csv  Cheb_Nodes.csv  Cheb_Q.csv  Cheb_Vn.csv  Cheb_input.csv  CheckupPulseProfile.csv  Current Profile drive cycle US06.csv  Current Profile random.csv  Error IDs.xlsx  Kokam_OCV_C.csv  Kokam_OCV_NMC.csv  Kokam_entropic_C.csv  LGChem_entropic_cell.csv  LICENSE  LICENSE.txt  OCVfit_anode.csv  OCVfit_cathode.csv  OCVfit_parameters.csv  README.md  README.txt  ReadCCCV.m  ReadCalendarAgeing.m  ReadCycleAgeing.m  ReadFollowCurrent.m  coverage.info  modelSetup.m  printDEGID.m  readAgeing_BatteryState.m  (+7 more)
benchmark/: CMakeLists.txt  benchmark_Cell_Bucket.cpp  benchmark_Cell_ECM.cpp  benchmark_Cell_ECM.hpp  benchmark_Cell_SPM.cpp  benchmark_LP_cases.cpp  benchmarks.hpp  running_Cell_Bucket.hpp  running_Cell_SPM.hpp  running_LP_cases.hpp
benchmark/matlab/: .gitignore  Cell_Bucket_single_default_CCCV.slx  Cell_Bucket_single_default_pulse.slx  Cell_ECM_2_RC_single_default_CCCV.slx  Cell_ECM_2_RC_single_default_pulse.slx  Cell_ECM_parallel.slx  Cell_ECM_parallel_3_default_CCCV.slx  Cell_ECM_parallel_3_default_pulse.slx  Cell_ECM_parallel_3_with_Rcontact_CCCV.slx  Cell_ECM_series.slx  Cell_ECM_series.slx.autosave  Cell_ECM_single.slx  Cell_ECM_single_default_CCCV.slx  Cell_ECM_single_default_pulse.slx  defaultSettings.m  plot_module_p.m  plot_single.m  plot_variables.m  print_snapshot.m  run_test.m  simulate_Cell_Bucket_CCCV.m  simulate_Cell_Bucket_pulse.m  simulate_ECM.asv  simulate_ECM.m  simulate_ECM_2_RC_CCCV.m  simulate_ECM_2_RC_pulse.m  simulate_ECM_CCCV.m  simulate_ECM_modules.m  simulate_ECM_parallel.m  simulate_ECM_parallel_3_CCCV.m  simulate_ECM_parallel_3_pulse.m  simulate_ECM_parallel_3_with_Rcontact_CCCV.m  simulate_ECM_pulse.m  simulate_ECM_single.m  squeeze_variables.m
benchmark/python/: lp_benchmark.py  slide_defaults.py  test_lp_benchmark.py  test_multi_cell.py  test_single_cell.py  test_single_cell_ECM.py  test_single_cell_SPM.py
src/: BasicCycler.cpp  BasicCycler.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  Cell_Fit.cpp  Cell_Fit.hpp  Cell_KokamNMC.cpp  Cell_KokamNMC.hpp  Cell_LGChemNMC.cpp  Cell_LGChemNMC.hpp  Cell_user.cpp  Cell_user.hpp  Cycler.cpp  Cycler.hpp  Cycling.cpp  Cycling.h  Degradation.cpp  Degradation.h  Interpolation.cpp  Interpolation.h  Model.cpp  Model.h  ReadCSVfiles.cpp  ReadCSVfiles.h  State.cpp  State.hpp  StorageUnit.hpp  basic_cycler.cpp  basic_cycler.hpp  cell.cpp  cell.hpp  cell_KokamNMC.cpp  cell_KokamNMC.hpp  cell_LGChemNMC.cpp  cell_LGChemNMC.hpp  cell_fit.cpp  cell_fit.hpp  cell_user.cpp  cell_user.hpp  (+32 more)
src/benchmarks/: running_Cell_Bucket.hpp
src/cells/: CMakeLists.txt  Cell.hpp  cell_limits.hpp  cell_user.cpp  cell_user.hpp  cell_util.cpp  cell_util.hpp  cells.hpp
src/cells/Cell_Bucket/: Cell_Bucket.hpp  State_Bucket.hpp
src/cells/Cell_ECM/: Cell_ECM.hpp  State_ECM.hpp
src/cells/Cell_PbA/: CMakeLists.txt  Cell_PbA.cpp  Cell_PbA.hpp  State_PbA.hpp
src/cells/Cell_SPM/: CMakeLists.txt  Cell_KokamNMC.cpp  Cell_KokamNMC.hpp  Cell_LGChemNMC.cpp  Cell_LGChemNMC.hpp  Cell_SPM.cpp  Cell_SPM.hpp  Cell_SPM_degradation.cpp  Cell_SPM_diffusion.cpp  Cell_SPM_dstate.cpp  Cell_SPM_fitting.cpp  Cell_SPM_new.cpp  Cell_SPM_new.hpp  Cell_SPM_thermal.cpp  Electrode_SPM.hpp  Model_SPM.hpp  State_SPM.hpp
src/cooling/: CMakeLists.txt  CoolSystem.cpp  CoolSystem.hpp  CoolSystem_HVAC.cpp  CoolSystem_HVAC.hpp  CoolSystem_open.cpp  CoolSystem_open.hpp  cooling.hpp
src/cooling/data_storage/: CoolSystemData.cpp  CoolSystemData.hpp  CoolSystem_HVACData.cpp  CoolSystem_HVACData.hpp  cool_data.hpp
src/deprecated/: BasicCycler.cpp  BasicCycler.hpp  Cell_LGChemNMC.hpp  Cell_SPM.cpp  CyclerOld.cpp  CyclerOld.hpp  cell_fit.hpp  cycling.cpp  cycling.hpp  state.cpp  state.hpp
src/factories/: CMakeLists.txt  makeBattery.cpp  makeBattery.hpp
src/modules/: CMakeLists.txt  Module.cpp  Module.hpp  Module_p.cpp  Module_p.hpp  Module_p_impl.cpp  Module_s.cpp  Module_s.hpp  modules.hpp
src/optimisation/: MCMC.cpp  MCMC.hpp
src/param/: cell_param.cpp  cell_param.hpp  param_default.hpp
src/power_conversion/: CMakeLists.txt  Converter.cpp  Converter.hpp
src/procedures/: CMakeLists.txt  Cycler.cpp  Cycler.hpp  Procedure.cpp  Procedure.hpp  Procedure_template.hpp  degradation.cpp  degradation.hpp  determine_OCV.cpp  determine_OCV.hpp  determine_characterisation.cpp  determine_characterisation.hpp  procedure_util.hpp  procedures.hpp
src/recording/: CellDataStorage.hpp  CellDataWriter.hpp
src/settings/: CMakeLists.txt  constants.hpp  derived_settings.hpp  enum_definitions.hpp  macros.hpp  settings.hpp  slide_paths.hpp  tolerances.hpp
src/system/: Battery.cpp  Battery.hpp  CMakeLists.txt
src/types/: ArrayVec.hpp  CMakeLists.txt  DataFrame.hpp  Deep_ptr.hpp  DynamicMatrix.hpp  FixedData.hpp  Histogram.hpp  Interval.hpp  OCVcurves.hpp  Pair.hpp  Parameter.hpp  PtrInterval.hpp  SmallVector.hpp  Span.hpp  State.hpp  Status.hpp  VecState.hpp  XYdata.hpp  matrix.hpp
src/types/data_storage/: CellData.hpp  (+9 more)
src/unit_tests/: Battery_test.cpp  CMakeLists.txt  Cell_Bucket_test.cpp  Cell_ECM_test.cpp  Cell_SPM_test.cpp  Cycler_test.cpp  Module_p_test.cpp  Module_s_test.cpp  Procedure_test.cpp  converter_test.cpp  unit_tests.hpp
src/utility/: CMakeLists.txt  array_util.hpp  descriptions.hpp  free_functions.hpp  interpolation.hpp  parallelisation.hpp  predicate_functions.hpp  slide_algorithms.hpp  slide_aux.hpp  timing.hpp  units.hpp  util.hpp  util_debug.hpp  util_error.hpp  utility.hpp
tests/integration/: CMakeLists.txt  parallel_model_sln.cpp  parallel_model_sln_slide.cpp
tests/unit/: Battery_test.cpp  CMakeLists.txt  Cell_Bucket_test.cpp  Cell_ECM_test.cpp  Cell_SPM_test.cpp  Converter_test.cpp  Cycler_test.cpp  Module_p_test.cpp  Module_s_test.cpp  Procedure_test.cpp  converter_test.cpp  unit_tests.hpp
(+231 files in other folders)
